# croe

./: .env  .gitignore  .gitmodules  .stylish-haskell.yaml  Makefile  README.md  default.nix  stack.yaml
.github/workflows/: ci.yml  haskell.yml
backend/: package.yaml
backend/app/: Main.hs
backend/config/: ci.json.gpg  dev.json  online.json  test.json.gpg
backend/src/CROE/Backend/: Env.hs  Logger.hs  Main.hs  Service.hs  Web.hs
backend/src/CROE/Backend/Clock/: Base.hs  Class.hs
backend/src/CROE/Backend/Logger/: Base.hs  Class.hs
backend/src/CROE/Backend/Mail/: Base.hs  Class.hs  Init.hs  Internal.hs
backend/src/CROE/Backend/ObjectStorage/: Base.hs  Class.hs
backend/src/CROE/Backend/Persist/: Base.hs  Chat.hs  Class.hs  Internal.hs  Review.hs  Types.hs
backend/src/CROE/Backend/Persist/Types/: ChatMessageStatus.hs  Role.hs  TaskStatus.hs
backend/src/CROE/Backend/Random/: Base.hs  Class.hs
backend/src/CROE/Backend/Redis/: Base.hs  Class.hs
backend/src/CROE/Backend/Service/: Auth.hs  ChatHistory.hs  Convert.hs  School.hs  Task.hs  User.hs
backend/src/CROE/Backend/Service/Auth/: Base.hs  Class.hs
backend/src/CROE/Backend/Service/Chat/: Base.hs  Class.hs
backend/src/CROE/Backend/Service/Elasticsearch/: Base.hs  Class.hs
backend/src/CROE/Backend/Time/: Class.hs
backend/src/CROE/Backend/Web/: ApiHandler.hs  WebSocket.hs
backend/test/data/: mysql.sql
backend/test/data/es_mapping/: task.json
backend/test/int/CROE/Backend/IntTest/: APISpec.hs
backend/test/int/CROE/Backend/IntTest/APISpec/: Base.hs  Task.hs  User.hs
backend/test/int/data/: mysql.sql
backend/test/unit/CROE/Backend/ObjectStorage/: LocalFileSystemSpec.hs
backend/test/unit/CROE/Backend/Service/: UserSpec.hs
common/: croe-common.cabal
common/src/CROE/Common/: API.hs  Chat.hs  School.hs  Task.hs  User.hs  Util.hs  WebSocket.hs
common/src/CROE/Common/API/: Chat.hs  Private.hs  Public.hs  School.hs  Task.hs  User.hs  WithTotal.hs
doc/ui-design/: chatbox.html  hall.html  login.html  profile_edit.html  put_task.html  register.html  task.html  task_list.html  topbar.html  view_task.html
docker/: Dockerfile  docker-compose.yml
frontend/: .gitignore  croe-frontend.cabal
frontend/app/: Main.hs
frontend/config/: dev.json  online.json
frontend/sass/: all.scss  build.sh  chatbox.scss  package-lock.json  package.json  task_list.scss
frontend/src/CROE/Frontend/: Client.hs  Env.hs  Main.hs  User.hs  Widget.hs
frontend/src/CROE/Frontend/Client/: Base.hs  Init.hs  Internal.hs  Protected.hs  User.hs
frontend/src/CROE/Frontend/Client/Class/: User.hs
frontend/src/CROE/Frontend/Env/: TH.hs
frontend/src/CROE/Frontend/User/: Base.hs  Class.hs
frontend/src/CROE/Frontend/Widget/: Chat.hs  Entrance.hs  Navbar.hs  Notification.hs  Pagination.hs  TaskList.hs
frontend/src/CROE/Frontend/Widget/TaskList/: ViewTask.hs
frontend/src/EI/WeeklyReport/Frontend/: Main.hs
frontend/src/FrontendUtils/: JSM.hs
frontend/src/FrontendUtils/Component/: Button.hs
frontend/src/FrontendUtils/JSM/: GHCJS.hs  Types.hs  Warp.hs
frontend/static/: js_main.js
