cabal-version: 1.12
name:           croe-frontend
version:        0.1.0.0
synopsis:       croe frontend
category:       Web
author:         fengzelin.isumi
maintainer:     fengzelin.isumi@bytedance.com
copyright:      2019 fengzelin.isumi
license:        BSD3
build-type:     Simple

library
  exposed-modules:
      CROE.Frontend.Main
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings OverloadedLists
  ghc-options: -Wall -Wno-simplifiable-class-constraints
  build-depends:
      base
    , croe-common
    , containers
    , jsaddle
    , jsaddle-dom
    , lens
    , reflex
    , reflex-dom
    , servant-reflex
    , text
    , time
    , unliftio-core
  -- if impl(ghcjs)
  --   other-modules:
  --       FrontendUtils.JSM.GHCJS
  -- else
  --   other-modules:
  --       FrontendUtils.JSM.Warp
  --   build-depends:
  --       filepath
  --     , jsaddle-warp
  --     , wai
  --     , wai-app-static
  --     , warp
  --     , websockets
  default-language: Haskell2010

executable frontend-exe
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      base
    , croe-frontend