cabal-version: 1.12
name:           croe-frontend
version:        0.1.0.0
synopsis:       croe frontend
category:       Web
author:         Isumi Feng
maintainer:     contact@zelinf.net
copyright:      2020 Isumi Feng
license:        BSD3
build-type:     Simple

library
  exposed-modules:
      CROE.Frontend.Main
      CROE.Frontend.Env
      CROE.Frontend.Env.TH
      CROE.Frontend.Client.Init
      CROE.Frontend.Client.Internal
      CROE.Frontend.Client.Class.User
      CROE.Frontend.User.Base
      CROE.Frontend.User.Class
      CROE.Frontend.Widget
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings OverloadedLists
  ghc-options: -Wall -Wno-simplifiable-class-constraints
  build-depends:
      base
    , croe-common
    , aeson
    , bytestring
    , containers
    , file-embed
    , jsaddle
    , jsaddle-dom
    , lens
    , mtl
    , reflex
    , reflex-dom
    , reflex-dom-bulma
    , servant
    , servant-reflex
    , template-haskell
    , text
    , time
    , transformers
  default-language: Haskell2010

executable croe-frontend-exe
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      base
    , croe-frontend