cabal-version: 1.12
name:           croe-frontend
version:        0.1.0.0
synopsis:       croe frontend
category:       Web
author:         Isumi Feng
maintainer:     contact@zelinf.net
copyright:      2020 Isumi Feng
license:        BSD3
build-type:     Simple

library
  exposed-modules:
      CROE.Frontend.Main
      CROE.Frontend.Env
      CROE.Frontend.Env.TH
      CROE.Frontend.Client
      CROE.Frontend.Client.Init
      CROE.Frontend.Client.Internal
      CROE.Frontend.Client.User
      CROE.Frontend.Client.Protected
      CROE.Frontend.User
      CROE.Frontend.Widget
      CROE.Frontend.Widget.Entrance
      CROE.Frontend.Widget.Notification
      CROE.Frontend.Widget.TaskList
      CROE.Frontend.Widget.Navbar
      CROE.Frontend.Widget.Pagination
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings OverloadedLists
  ghc-options: -Wall -Wno-simplifiable-class-constraints
  build-depends:
      base
    , croe-common
    , aeson
    , bytestring
    , containers
    , data-default
    , email-validate
    , file-embed
    , jsaddle
    , jsaddle-dom
    , lens
    , mtl
    , reflex
    , reflex-dom
    , reflex-dom-bulma
    , reflex-dom-contrib
    , servant
    , servant-reflex
    , split
    , template-haskell
    , text
    , time
    , transformers
    , uri-bytestring
  default-language: Haskell2010

executable croe-frontend-exe
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      base
    , croe-frontend